Fix footer gap

--- a/_sass/layout/_sitewide-footer.scss
+++ b/_sass/layout/_sitewide-footer.scss
@@ -47,7 +47,7 @@
         flex-wrap: wrap-reverse;
         align-items: baseline;
         justify-content: space-between;
-        gap: 0 1em;
+        gap: 0 1rem;
     }
 
     &__color-theme-toggle {
